<resources>
    <string name="app_name">Proyecto01_Antojitos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="action_entrar">Entrar</string>
    <string name="menu_cliente">Cliente</string>
    <string name="menu_sucursal">Sucursal</string>
    <string name="menu_repartidor">Repartidor</string>
    <string name="menu_producto">Producto</string>
    <string name="menu_categoria_producto">Categoría Producto</string>
    <string name="menu_pedido">Pedido</string>
    <string name="menu_factura">Factura</string>
    <string name="menu_credito">Crédito</string>
    <string name="menu_detalle_pedido">Detalle Pedido</string>
    <string name="menu_tipo_evento">Tipo Evento</string>
    <string name="menu_direccion">Dirección</string>
    <string name="menu_departamento">Departamento</string>
    <string name="menu_municipio">Municipio</string>
    <string name="menu_distrito">Distrito</string>
    <string name="menu_datos_producto">Datos Producto</string>
    <string name="sucursal_title">Gestión de Sucursales</string>
    <string name="sucursal_btn_crear">Crear Sucursal</string>
    <string name="sucursal_btn_consultar">Consultar Sucursal</string>
    <string name="sucursal_btn_editar">Editar Sucursal</string>
    <string name="sucursal_btn_eliminar">Eliminar Sucursal</string>
    <string name="cliente_title">Gestión de Clientes</string>
    <string name="cliente_btn_crear">Crear Cliente</string>
    <string name="cliente_btn_consultar">Consultar Cliente</string>
    <string name="cliente_btn_editar">Editar Cliente</string>
    <string name="cliente_btn_eliminar">Eliminar Cliente</string>
    <string name="title_consultar_cliente">Consultar Cliente</string>
    <string name="title_informacion_cliente">Información del Cliente</string>
    <string name="hint_seleccionar_cliente">Seleccionar Cliente</string>
    <string name="label_id">ID cliente: </string>
    <string name="label_nombre">Nombre: </string>
    <string name="label_apellido">Apellido: </string>
    <string name="label_telefono">Teléfono: </string>
    <string name="title_nuevo_cliente">Nuevo Cliente</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="title_editar_cliente">Editar Cliente</string>
    <string name="switch_cliente_activo">Cliente Activo</string>
    <string name="btn_guardar_cambios">Guardar Cambios</string>
    <string name="title_eliminar_cliente">Eliminar Cliente</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="repartidor_title">Gestión de Repartidores</string>
    <string name="repartidor_btn_crear">Crear Repartidor</string>
    <string name="repartidor_btn_consultar">Consultar Repartidor</string>
    <string name="repartidor_btn_editar">Editar Repartidor</string>
    <string name="repartidor_btn_eliminar">Eliminar Repartidor</string>
    <string name="producto_title">Gestión de Productos</string>
    <string name="producto_btn_crear">Crear Producto</string>
    <string name="producto_btn_consultar">Consultar Producto</string>
    <string name="producto_btn_editar">Editar Producto</string>
    <string name="producto_btn_eliminar">Eliminar Producto</string>
    <string name="title_consultar_producto">Consultar Producto</string>
    <string name="title_informacion_producto">Información del Producto</string>
    <string name="hint_seleccionar_producto">Seleccionar Producto</string>
    <string name="label_id_producto">ID Producto: </string>
    <string name="label_id_categoria">ID Categoría: </string>
    <string name="label_descripcion">Descripción: </string>
    <string name="title_crear_producto">Crear Nuevo Producto</string>
    <string name="hint_categoria">Categoría</string>
    <string name="btn_guardar_producto">Guardar Producto</string>
    <string name="title_editar_producto">Editar Producto</string>
    <string name="btn_producto_activo">Producto Activo</string>
    <string name="title_eliminar_producto">Eliminar Producto</string>
    <string name="label_pregunta_eliminar">¿Está seguro de eliminar este producto?</string>
    <string name="categoria_producto_title">Gestión de Categorías de Producto</string>
    <string name="categoria_producto_btn_crear">Crear Categoría</string>
    <string name="categoria_producto_btn_consultar">Consultar Categoría</string>
    <string name="categoria_producto_btn_editar">Editar Categoría</string>
    <string name="categoria_producto_btn_eliminar">Eliminar Categoría</string>
    <string name="pedido_title">Gestión de Pedidos</string>
    <string name="pedido_btn_crear">Crear Pedido</string>
    <string name="pedido_btn_consultar">Consultar Pedido</string>
    <string name="pedido_btn_editar">Editar Pedido</string>
    <string name="pedido_btn_eliminar">Eliminar Pedido</string>
    <string name="factura_title">Gestión de Facturas</string>
    <string name="factura_btn_crear">Crear Factura</string>
    <string name="factura_btn_consultar">Consultar Factura</string>
    <string name="factura_btn_editar">Editar Factura</string>
    <string name="factura_btn_eliminar">Eliminar Factura</string>
    <string name="credito_title">Gestión de Créditos</string>
    <string name="credito_btn_crear">Crear Crédito</string>
    <string name="credito_btn_consultar">Consultar Crédito</string>
    <string name="credito_btn_editar">Editar Crédito</string>
    <string name="credito_btn_eliminar">Eliminar Crédito</string>
    <string name="detalle_pedido_title">Gestión de Detalles de Pedido</string>
    <string name="detalle_pedido_btn_crear">Crear Detalle</string>
    <string name="detalle_pedido_btn_consultar">Consultar Detalle</string>
    <string name="detalle_pedido_btn_editar">Editar Detalle</string>
    <string name="detalle_pedido_btn_eliminar">Eliminar Detalle</string>
    <string name="tipo_evento_title">Gestión de Tipos de Evento</string>
    <string name="tipo_evento_btn_crear">Crear Tipo Evento</string>
    <string name="tipo_evento_btn_consultar">Consultar Tipo Evento</string>
    <string name="tipo_evento_btn_editar">Editar Tipo Evento</string>
    <string name="tipo_evento_btn_eliminar">Eliminar Tipo Evento</string>
    <string name="direccion_title">Gestión de Direcciones</string>
    <string name="direccion_btn_crear">Crear Dirección</string>
    <string name="direccion_btn_consultar">Consultar Dirección</string>
    <string name="direccion_btn_editar">Editar Dirección</string>
    <string name="direccion_btn_eliminar">Eliminar Dirección</string>
    <string name="departamento_title">Gestión de Departamentos</string>
    <string name="departamento_btn_crear">Crear Departamento</string>
    <string name="departamento_btn_consultar">Consultar Departamento</string>
    <string name="departamento_btn_editar">Editar Departamento</string>
    <string name="departamento_btn_eliminar">Eliminar Departamento</string>
    <string name="municipio_title">Gestión de Municipios</string>
    <string name="municipio_btn_crear">Crear Municipio</string>
    <string name="municipio_btn_consultar">Consultar Municipio</string>
    <string name="municipio_btn_editar">Editar Municipio</string>
    <string name="municipio_btn_eliminar">Eliminar Municipio</string>
    <string name="distrito_title">Gestión de Distritos</string>
    <string name="distrito_btn_crear">Crear Distrito</string>
    <string name="distrito_btn_consultar">Consultar Distrito</string>
    <string name="distrito_btn_editar">Editar Distrito</string>
    <string name="distrito_btn_eliminar">Eliminar Distrito</string>
    <string name="title_crear_distrito">Crear Distrito</string>
    <string name="title_consultar_distrito">Consultar Distrito</string>
    <string name="title_editar_distrito">Editar Distrito</string>
    <string name="title_eliminar_distrito">Eliminar Distrito</string>
    <string name="hint_departamento">Departamento</string>
    <string name="hint_municipio">Municipio</string>
    <string name="hint_nombre_distrito">Nombre del Distrito</string>
    <string name="hint_codigo_postal">Código Postal</string>
    <string name="hint_seleccionar_distrito">Seleccionar Distrito</string>
    <string name="switch_distrito_activo">Distrito Activo</string>
    <string name="label_detalle_distrito">Detalles del distrito</string>
    <string name="label_detalle_ubicacion">Detalles del ubicación</string>
    <string name="datos_producto_title">Gestión de Datos de Producto</string>
    <string name="datos_producto_btn_crear">Crear Datos Producto</string>
    <string name="datos_producto_btn_consultar">Consultar Datos Producto</string>
    <string name="datos_producto_btn_editar">Editar Datos Producto</string>
    <string name="datos_producto_btn_eliminar">Eliminar Datos Producto</string>
    <string name="direccion_crear_title">Crear Nueva Dirección</string>
    <string name="factura_crear_title">Crear Nueva Factura</string>
    <string name="factura_crear_label_pedido">Seleccione Pedido a Facturar:</string>
    <string name="factura_crear_label_monto_calculado">Monto Total Calculado (incl. IVA):</string>
    <string name="factura_crear_label_fecha">Fecha de Emisión:</string>
    <string name="factura_crear_hint_fecha">Tocar para seleccionar fecha</string>
    <string name="factura_crear_label_tipo_pago">Tipo de Pago:</string>
    <string name="factura_crear_label_estado_inicial">Estado Inicial:</string>
    <string name="factura_crear_estado_default">Pendiente</string>
    <string name="factura_crear_btn_guardar">Guardar Factura</string>
    <string name="factura_crear_monto_placeholder">--.--</string>
    <string name="sucursal_editar_titulo">Editar Sucursal</string>
    <string name="sucursal_editar_label_sucursal">Selecciona la sucursal</string>
    <string name="sucursal_editar_label_nombre">Nombre de la Sucursal</string>
    <string name="sucursal_editar_label_telefono">Teléfono</string>
    <string name="sucursal_editar_label_direccion">Dirección Sucursal</string>
    <string name="sucursal_editar_label_departamento">Departamento</string>
    <string name="sucursal_editar_label_municipio">Municipio</string>
    <string name="sucursal_editar_label_distrito">Distrito</string>
    <string name="sucursal_editar_label_apertura">Hora Apertura</string>
    <string name="sucursal_editar_label_cierre">Hora Cierre</string>
    <string name="sucursal_editar_switch_activo">Sucursal activa</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="datos_producto_crear_title">Crear Datos Producto</string>
    <string name="datos_producto_crear_label_sucursal">Sucursal:</string>
    <string name="datos_producto_crear_label_producto">Producto:</string>
    <string name="datos_producto_crear_btn_crear_producto">Crear Producto</string>
    <string name="datos_producto_crear_label_precio">Precio (USD):</string>
    <string name="datos_producto_crear_hint_precio">Ingrese precio</string>
    <string name="datos_producto_crear_label_stock">Stock:</string>
    <string name="datos_producto_crear_hint_stock">Ingrese stock</string>
    <string name="datos_producto_crear_btn_guardar">Guardar</string>
    <string name="datos_producto_crear_btn_limpiar">Limpiar</string>
</resources>