<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_cliente"
            android:title="@string/menu_cliente" />
        <item
            android:id="@+id/nav_sucursal"
            android:icon="@drawable/ic_menu_sucursal"
            android:title="@string/menu_sucursal" />
        <item
            android:id="@+id/nav_repartidor"
            android:icon="@drawable/ic_repartidor"
            android:title="@string/menu_repartidor" />

        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/ic_producto"
            android:title="@string/menu_producto" />

        <item
            android:id="@+id/nav_categoria_producto"
            android:icon="@drawable/ic_categoria"
            android:title="@string/menu_categoria_producto" />

        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_pedido"
            android:title="@string/menu_pedido" />

        <item
            android:id="@+id/nav_factura"
            android:icon="@drawable/ic_factura"
            android:title="@string/menu_factura" />

        <item
            android:id="@+id/nav_credito"
            android:icon="@drawable/ic_credito"
            android:title="@string/menu_credito" />

        <item
            android:id="@+id/nav_detalle_pedido"
            android:icon="@drawable/ic_detalle"
            android:title="@string/menu_detalle_pedido" />

        <item
            android:id="@+id/nav_tipo_evento"
            android:icon="@drawable/ic_evento"
            android:title="@string/menu_tipo_evento" />

        <item
            android:id="@+id/nav_direccion"
            android:icon="@drawable/ic_direccion"
            android:title="@string/menu_direccion" />

        <item
            android:id="@+id/nav_departamento"
            android:icon="@drawable/ic_departamento"
            android:title="@string/menu_departamento" />

        <item
            android:id="@+id/nav_municipio"
            android:icon="@drawable/ic_municipio"
            android:title="@string/menu_municipio" />

        <item
            android:id="@+id/nav_distrito"
            android:icon="@drawable/ic_distrito"
            android:title="@string/menu_distrito" />

        <item
            android:id="@+id/nav_datos_producto"
            android:icon="@drawable/ic_datos_producto"
            android:title="@string/menu_datos_producto" />
    </group>
</menu>