<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/cliente_title"
        android:padding="8dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_crear"
        android:text="@string/cliente_btn_crear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_consultar"
        android:text="@string/cliente_btn_consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_editar"
        android:text="@string/cliente_btn_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_eliminar"
        android:text="@string/cliente_btn_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
