<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_sucursal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_title"
        android:textSize="18sp"
        android:padding="8dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_btn_crear" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_btn_consultar" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_btn_editar" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sucursal_btn_eliminar" />
</LinearLayout>